Added Support for Multipage PDFs in Stack